notes-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app
  labels:
   component: notes-app
spec:
  replicas: 3
  selector:
   matchLabels:
    component: notes-app
  template:
   metadata:
    labels:
     component: notes-app
   spec:
    containers:
     - name: notes-app
       image: vedant7669/notes-app:v1
       ports:
        - containerPort: 8000
