notes-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
spec:
  selector:
    component: notes-app
  ports:
    - protocol : TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
